# Agentic-RAG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/routers/: chat.py  memory.py  upload.py
api/schemas/: chat.py  documents.py  memories.py
core/: config.py  docs_processing.py  embeddings.py  loader.py  mem0_client.py  splitter.py  vectorstore.py
database/: crud.py  database.py  models.py
test/: agentic_rag.ipynb
workflow/: graph.py  llms.py  nodes.py  prompts.py  state.py  tools.py
